# etc-express-midi

./: Cargo.toml  LICENSE  README.md
src/: etc_midi.rs  lib.rs  main.rs  msc.rs
